# gaia-benchmark-agent

./: .gitignore  README.md  app.py  chess_exploration.ipynb  graph.py  pyproject.toml  requirements.txt  tools.py
src/final_assignment_template/: __init__.py
src/gaia_benchmark_agent/: __init__.py
studio/: langgraph.json  requirements.txt
